--- a/assets/css/personal-info.css
+++ b/assets/css/personal-info.css
@@ -7,10 +7,6 @@ html {
   font-family: 'Helvetica Neue';
   src: url('../fonts/HelveticaNeue.ttc');
 }
-h1,
-p {
-  margin: 0;
-}
 
 /* form stylings */
 .form {
@@ -35,7 +31,7 @@ p {
 .header-info-container h1 {
   width: 179px;
   height: 29px;
-  font-family: 'HelveticaNeue';
+  font-family: 'Helvetica Neue';
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -90,7 +86,10 @@ label,
   margin-right: 56px;
 }
 .name,
-.surname {
+.surname,
+.about,
+.email,
+.phone {
   display: flex;
   flex-direction: column;
 }
@@ -118,12 +117,22 @@ label,
 /* picture & about me */
 
 .picture {
+  margin: 54px 0 54px 150px;
   display: flex;
+  align-items: center;
 }
-
+.imgInputLabel {
+  display: flex;
+  margin: 0;
+}
 .imgUploadBtn {
+  margin-left: 19px;
+  margin-bottom: 0;
+  width: 107px;
+  height: 27px;
+  display: flex;
+  justify-content: center;
   cursor: pointer;
-  padding: 4px 19px 6px 19px;
   background: #0e80bf;
   border-radius: 4px;
   font-family: 'Helvetica Neue';
@@ -137,4 +146,62 @@ label,
   opacity: 0;
   position: absolute;
   z-index: -1;
+}
+.about {
+  margin-left: 150px;
+}
+.aboutInput {
+  width: 782px;
+  height: 34px;
+  padding: 13px 0 69px 16px;
+  background: #ffffff;
+  border: 1px solid #bcbcbc;
+  border-radius: 4px;
+}
+.aboutInput::placeholder {
+  font-family: 'Helvetica Neue';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: rgba(0, 0, 0, 0.6);
+}
+/* email and phone number */
+
+.email-number-wrapper {
+  margin: 33px 0 0 150px;
+}
+.emailInput,
+.phoneNumInput {
+  width: 766px;
+  height: 21px;
+  padding: 13px 16px 14px 16px;
+  background: #ffffff;
+  border: 1px solid #bcbcbc;
+  border-radius: 4px;
+}
+.phone {
+  margin-top: 29px;
+}
+
+.nextPageButton-container {
+  margin: 144px 150px 65px 0;
+  display: flex;
+  justify-content: flex-end;
+}
+.nextPageButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 14px 35px 14px 35px;
+  background: #6b40e3;
+  border-radius: 4px;
+  font-family: 'Helvetica Neue';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  letter-spacing: 0.08em;
+  color: #ffffff;
 }
