--- a/assets/css/personal-info.css
+++ b/assets/css/personal-info.css
@@ -88,8 +88,13 @@ label,
 .surname {
   margin-left: 19px;
 }
-#surnameErrorImg {
+#surnameErrorImg,
+#uploadPicErrorImg {
   margin-left: 10px;
+}
+#emailErrorImg,
+#phoneErrorImg {
+  margin-left: 13px;
 }
 
 .name,
@@ -184,6 +189,10 @@ label,
 .email-number-wrapper {
   margin: 33px 0 0 150px;
 }
+.email-container,
+.phone-container {
+  display: flex;
+}
 .emailInput,
 .phoneNumInput {
   width: 766px;
@@ -193,8 +202,8 @@ label,
   border: 1px solid #bcbcbc;
   border-radius: 4px;
 }
-.phone {
-  margin-top: 29px;
+.email {
+  margin-bottom: 29px;
 }
 
 .nextPageButton-container {
@@ -217,6 +226,13 @@ label,
   line-height: 20px;
   letter-spacing: 0.08em;
   color: #ffffff;
+}
+
+.validatedCheckLargeInputs {
+  background-image: url(../icons/success-check.svg);
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+  background-position: 770px;
 }
 
 /* CV Display */
@@ -249,6 +265,7 @@ label,
   border-radius: 50%;
   background-position: center;
   background-size: cover;
+  margin: 19px 75px 0 133px;
 }
 /* stylings for validation */
 .input-control input:focus {
