feat: experience info form validation

--- a/assets/css/personal-info.css
+++ b/assets/css/personal-info.css
@@ -287,7 +287,7 @@ label,
   text-transform: lowercase;
   color: #000000;
 }
-#aboutMeLabel {
+#aboutMeFormLabel {
   font-family: 'Helvetica Neue';
   font-style: normal;
   font-weight: 700;
