--- a/assets/css/experience-info.css
+++ b/assets/css/experience-info.css
@@ -235,19 +235,16 @@ input[type='date']::-webkit-calendar-picker-indicator {
   width: 18px;
 }
 .startDate {
-  margin-right: 36px;
+  margin-right: 30px;
 }
 .endDate {
-  margin-left: 36px;
-}
-#startDateErrorImg,
-#endDatePicErrorImg {
-  margin-left: 10px;
+  margin-left: 30px;
 }
 
 /* Description */
 .description-wrapper {
   margin: 33px 0 0 150px;
+  display: flex;
 }
 
 .descriptionInput {
@@ -339,22 +336,54 @@ input[type='date']::-webkit-calendar-picker-indicator {
   color: #f93b1d;
 }
 .positionEmployeeForm {
-  margin-top: 15px;
   display: flex;
 }
 #formPosition,
 #formEmployer {
+  margin-top: 10px;
   font-family: 'Helvetica Neue';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #1a1a1a;
+  margin-bottom: 7px;
 }
 #formEmployer {
   margin-left: 7px;
 }
+.startEndDateForm {
+  display: flex;
+}
 
+#formStartDate,
+#formEndDate,
+#dash {
+  margin: 0;
+  font-family: 'Helvetica Neue';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #919191;
+}
+#dash {
+  margin: 0 5px 0 5px;
+  display: flex;
+  align-items: flex-start;
+}
+#formDescription {
+  margin-top: 16px;
+  font-family: 'Helvetica Neue';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  text-transform: capitalize;
+  white-space: normal;
+  color: #000000;
+  margin-right: 80px;
+}
 /* classes for validation */
 
 .validatedCheckLargeInputs {
@@ -383,4 +412,15 @@ input[type='date']::-webkit-calendar-picker-indicator {
 }
 #employerErrorImg {
   margin: 0 0 0 14px;
+}
+#startDateErrorImg {
+  margin-top: 12px;
+  margin-right: 5px;
+}
+#endDateErrorImg {
+  margin-top: 12px;
+  margin-left: 10px;
+}
+#descriptionErrorImg {
+  margin-left: 10px;
 }
