--- a/assets/css/education-info.css
+++ b/assets/css/education-info.css
@@ -15,10 +15,20 @@ html {
   background: #f9f9f9;
 }
 .backBtn {
-  margin-right: 77px;
   width: 9.21px;
   height: 16px;
   font-weight: 500;
+  margin-left: 14px;
+}
+.backBtn-wrapper {
+  margin-right: 58px;
+  width: 40px;
+  height: 40px;
+  background: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 .header-backBtn-wrapper {
   display: flex;
@@ -235,11 +245,14 @@ select option {
 
 /* CV display (previous page - personal info version) */
 .form-info-display {
+  display: flex;
+  flex-direction: column;
   background: #ffffff;
   width: 822px;
 }
 .info-picture-wrapper {
   display: flex;
+  justify-content: space-between;
 }
 .info-container {
   margin-left: 80px;
@@ -398,9 +411,9 @@ select option {
   word-break: break-word;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
+  margin-top: auto;
   margin-left: 78px;
+  margin-bottom: 44px;
 }
 /* Education Form Display */
 
